<resources>
    <string name="app_name">Github TODOs</string>
    <string name="main_subheading">All your project TODOs in one place!</string>
    <string name="login_text">Or Login With Github To See and Edit Your TODOs</string>
    <string name="get_started_text">What do you want TODO?</string>
    <string name="todos_github">Find Repos/TODOs on GitHub</string>
    <string name="todos_firebase">Browse saved Repos/TODOs</string>
    <string name="username">username</string>
    <string name="your_username">your username</string>
    <string name="github_repos_heading">%s\'s Github Repos</string>
    <string name="firebase_repos_heading">Your Saved Repos</string>
    <string name="plus_sign">+</string>
    <string name="new_todo_hint">New Todo Goes Here</string>
    <string name="your_password">your password</string>
    <string name="main_heading_aside">At last, you can easily obsess about them wherever you go</string>
    <string name="bg_content_description">Background image with computer and Github usb stick</string>
    <string name="add_note_hint">Add a note here</string>
    <string name="no_data_available">No Repos to display. Try searching for a Github username above!</string>
    <string name="save_repo">Save Repo</string>
    <string name="no_todos_yet_why_not_add_one">No TODOs yet! Why not add one?</string>
    <string name="about_app_blurb">This app will let you manage your project project TODO lists wherever you go! Grab your TODOs from GitHub, save the ones you want to remember and (eventually) add notes/prioritize/organize them to your heart\'s content.</string>
    <string name="step_4_aside">(Publishing TODOS as Github issues to be implemented someday!)</string>
    <string name="step_4">4. View and edit your TODOs as much as you want</string>
    <string name="step_3">3. Once you have saved some repos and todos, you will be able to access them from the main page</string>
    <string name="step_2_aside">(Code scraping for todos to be implemented someday!)</string>
    <string name="step_2">2. From there, you can view and save repos and TODOs taken from your repo issues</string>
    <string name="step_1">1. Start by searching Github for your username</string>
    <string name="using_this_app">Using this app:</string>
    <string name="add">Add</string>
    <string name="add_note">Add Note</string>
    <string name="no_saved_repos">No saved repos yet, please go to the Github section of the App and find some to save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_todo">Save Todo</string>
</resources>
