<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.githubtodos.ui.AboutActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/bgdark"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bg_content_description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_subheading"
        android:id="@+id/subHeadingView"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textColor="@color/colorPrimaryLight"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <TextView
        android:text="@string/about_app_blurb"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subHeadingView"
        android:layout_centerHorizontal="true"
        android:id="@+id/asideTextView"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"/>

    <TextView
        android:text="@string/using_this_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/asideTextView"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/getStartedView"/>

    <TextView
        android:text="@string/step_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getStartedView"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/step1TextView"/>
    <TextView
        android:text="@string/step_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step1TextView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/step2TextView"/>
    <TextView
        android:text="@string/step_2_aside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step2TextView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/step2AsideTextView"/>
    <TextView
        android:text="@string/step_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step2AsideTextView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/step3TextView"/>
    <TextView
        android:text="@string/step_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step3TextView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/step4TextView"/>
    <TextView
        android:text="@string/step_4_aside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step4TextView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryLight"
        android:id="@+id/step4AsideTextView"/>

</RelativeLayout>
